<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblSignInAs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblSigninAs"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorMain" />

        <TextView
            android:id="@+id/txtUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/lblSignInAs"
            android:text="User name"
            android:textColor="@color/colorMain" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblNewPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="30dp"
            android:textColor="@color/colorMain"
            android:text="@string/lblNewPatient" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:background="@color/colorMain"
            android:textColor="@color/colorWhite"
            android:text="@string/btnLogout"
            android:layout_alignParentRight="true"
            android:onClick="onClickLogout"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorMain"
        android:textSize="20dp"
        android:text="@string/txtDescNewPatient" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/lblFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMain"
            android:text="@string/lblFirstName" />

        <EditText
            android:id="@+id/txtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/lblLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMain"
            android:text="@string/lblLastName" />

        <EditText
            android:id="@+id/txtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/lblDepartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMain"
            android:text="@string/lblDepartment" />

        <Spinner
            android:id="@+id/spinDepartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/lblDoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMain"
            android:text="@string/lblDoctor" />

        <Spinner
            android:id="@+id/spinDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/lblRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMain"
            android:text="@string/lblRoom" />

        <Spinner
            android:id="@+id/spinRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMain"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="20dp"
        android:text="@string/btnSubmit"
        android:onClick="onClickPatientSubmit"/>
</LinearLayout>