<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblSignInAs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblSigninAs"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorMain" />

        <TextView
            android:id="@+id/txtUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/lblSignInAs"
            android:text="User name"
            android:textColor="@color/colorMain" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblSeachPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="30dp"
            android:textColor="@color/colorMain"
            android:text="@string/lblDashboard" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:background="@color/colorMain"
            android:textColor="@color/colorWhite"
            android:text="@string/btnLogout"
            android:layout_alignParentRight="true"
            android:onClick="onClickLogout"/>

    </RelativeLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/lblPatientId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/lblPatientId"
                android:textColor="@color/colorMain" />

            <TextView
                android:id="@+id/txtPatientId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="text"
                android:textColor="@color/colorBlack"
                android:textSize="30dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/lblPatientName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/lblPatientName"
                android:textColor="@color/colorMain" />

            <TextView
                android:id="@+id/txtPatientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="text"
                android:textColor="@color/colorBlack"
                android:textSize="30dp" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnPatientInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMain"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="20dp"
        android:text="@string/btnPaitentInfo"
        android:onClick="onClickPatientInfo"/>

    <Button
        android:id="@+id/btnViewTestData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMain"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="20dp"
        android:text="@string/btnViewTestData"
        android:onClick="onClickViewTestData"/>

    <Button
        android:id="@+id/btnInputTestData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMain"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="20dp"
        android:text="@string/btnInputTestData"
        android:onClick="onClickInputTestData"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnBackToMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorMain"
            android:padding="10dp"
            android:text="@string/btnBackToMenu"
            android:textColor="@color/colorWhite"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="onClickBackToMenu"/>
    </RelativeLayout>

</LinearLayout>