<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblSignInAs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblSigninAs"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorMain" />

        <TextView
            android:id="@+id/txtUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/lblSignInAs"
            android:text="User name"
            android:textColor="@color/colorMain" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblPatientInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="30dp"
            android:textColor="@color/colorMain"
            android:text="@string/lblPatientInfo" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:background="@color/colorMain"
            android:textColor="@color/colorWhite"
            android:text="@string/btnLogout"
            android:layout_alignParentRight="true"
            android:onClick="onClickLogout"/>

    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/lblPatientId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/lblPatientId"
                android:textColor="@color/colorMain" />

            <TextView
                android:id="@+id/txtPatientId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="text"
                android:textColor="@color/colorBlack"
                android:textSize="20dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/lblFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/lblFirstName"
                android:textColor="@color/colorMain" />

            <TextView
                android:id="@+id/txtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="text"
                android:textColor="@color/colorBlack"
                android:textSize="20dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/lblLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/lblLastName"
                android:textColor="@color/colorMain" />

            <TextView
                android:id="@+id/txtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="text"
                android:textColor="@color/colorBlack"
                android:textSize="20dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/lblDepartment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/lblDepartment"
                android:textColor="@color/colorMain" />

            <TextView
                android:id="@+id/txtDepartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="text"
                android:textColor="@color/colorBlack"
                android:textSize="20dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/lblDoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/lblDoctor"
                android:textColor="@color/colorMain" />

            <TextView
                android:id="@+id/txtDoctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="text"
                android:textColor="@color/colorBlack"
                android:textSize="20dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/lblRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/lblRoom"
                android:textColor="@color/colorMain" />

            <TextView
                android:id="@+id/txtRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="text"
                android:textColor="@color/colorBlack"
                android:textSize="20dp" />

        </TableRow>

    </TableLayout>

</LinearLayout>