<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.georgebrown.comp3074.a2100984638.MainActivity"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="273dp"
        android:layout_height="287dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/logo" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/lblUserId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblUserId"
            android:textColor="@color/colorMain" />

        <EditText
            android:id="@+id/txtUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/lblPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblPassword"
            android:textColor="@color/colorMain" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

    </TableRow>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMain"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:text="@string/btnEnter"
        android:onClick="onClickEnter"/>

</LinearLayout>
